actions-runner-controller/ingressroute-actions-runner-controller-github-webhook.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: arc-webhook.${dns_domain}
  namespace: actions-runner-controller
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`arc-webhook.${dns_domain}`)
      kind: Rule
      services:
        - name: actions-runner-controller-github-webhook-server
          kind: Service
          port: 80
